Patched extension to work better with msaccess
- Added SymbolProvider, etc. from 'https://github.com/spences10/vscode-vba'
- Added 'Option Database' for ms access
- Added 'Global' keyword
- 'On Error Goto 0' is now highlighted like the vbe does
- Added 'Enum/End Enum'
- Added 'TypeOf'
- Added 'reload' to .gitignore
- Added builtin functions (CBool,CByte,...) that the vbe does highlight
- Removed highlighting for 'Call <..>', because function calls without 'call' are also not highlighted
- Added source code extensions for msaccess

--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
 				"extensions": [
 					".bas",
 					".cls",
-					".frm"
+					".frm",
+					".ACM",
+					".ACF",
+					".ACR"
 				],
 				"configuration": "./out/language-configuration.json"
 			},
