--- a/syntaxes/vba.tmGrammar.yml
+++ b/syntaxes/vba.tmGrammar.yml
@@ -29,23 +29,29 @@ repository:
   keywords:
     patterns:
       - name: keyword.other.option.vba
-        match: (?i)\bOption (Base [01]|Compare (Binary|Text)|Explicit|Private Module)\b
+        match: (?i)\bOption (Base [01]|Compare (Binary|Text|Database)|Explicit|Private Module)\b
       - name: keyword.conditional.vba
         match: (?i:\b(Do(( While)|( Until))?|While|Case( Else)?|Else(If)?|For( Each)?|(I)?If|In|New|(Select )?Case|Then|To|Step|With)\b)
       - name: keyword.conditional.end.vba
         match: (?i:\b(End( )?If|End (Select|With)|Next|Wend|Loop(( While)|( Until))?|Exit (For|Do|While))\b)
       - name: keyword.control.vba
-        match: (?i:(\b(Exit (Function|Property|Sub)|As|And|By(Ref|Val)|Goto|Is|Like|Mod|Not|On Error|Optional|Or|Resume Next|Stop|Xor|Eqv|Imp|TypeOf|AddressOf)\b)|(\b(End)\b(?=\n)))
+        match: (?i:(\b(Exit (Function|Property|Sub)|As|And|By(Ref|Val)|Goto 0|Goto|Is|Like|Mod|Not|On Error|Optional|Or|Resume Next|Stop|Xor|Eqv|Imp|TypeOf|AddressOf)\b)|(\b(End)\b(?=\n)))
+      - name: keyword.enum.vba
+        match: (?i:\b(Enum|End Enum)\b)
       - name: keyword.other.vba
         match: (?i:\b(Attribute|Call|End (Function|Property|Sub|Type)|(Static )?(Const|Function|Property|Sub|Type)|Declare|PtrSafe|WithEvents|Event|RaiseEvent)\b)
       - name: keyword.other.visibility.vba
-        match: (?i:\b(Private|Public|Friend)\b)
+        match: (?i:\b(Private|Public|Friend|Global)\b)
+      - name: keyword.other.builtin.vba
+        match: (?i:\b(CBool|CByte|CCur|CDate|CDbl|CInt|CLng|CSng|CStr|LBound|UBound)\b)
       - name: constant.language.vba
         match: (?i)\b(Empty|False|Nothing|Null|True)\b
 
   functions:
-    name: entity.name.function.vba
-    match: (?i:\b(?<=(Call|Function|Sub)\s)[a-zA-Z][a-zA-Z0-9_]*\b)(?=\(\)?)
+    patterns:
+      - name: entity.name.function.vba
+        match: (?i:\b(?<=(Function|Sub|Property (G|L|S)et)\s)[a-zA-Z][a-zA-Z0-9_]*\b)(?=\(\)?)
+            
 
   numbers:
     patterns:
@@ -76,3 +82,5 @@ repository:
         captures:
           1:
             name: support.type
+      - name: support.type.class
+        match: (?i:\b(?<=(TypeOf [a-zA-Z][a-zA-Z0-9_]* Is)\s)[a-zA-Z][a-zA-Z0-9_]*\b)
